fix: flash in dark mode
notion doc

--- a/styles/notion-doc.scss
+++ b/styles/notion-doc.scss
@@ -1,5 +1,10 @@
 /**override default notion style*/
 
+.notion-app.light-mode, .notion-header {
+  background-color: transparent !important;
+}
+
+
 /**删除padding值，会导致网页都出现滚动条- 尽管网页内容并未超过视口。 todo pull a mr */
 .notion > * {
   padding: 0 !important;
@@ -17,6 +22,7 @@
   overflow: auto;
   overflow-y: hidden;
 }
+
 
 .notion-header .breadcrumb .title {
   max-width: 160px;
