--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -29,7 +29,7 @@
 
   @media (prefers-color-scheme: dark) {
     :root {
-      --background: 0 0% 3.9%;
+      --background: 0 0% 0;
       --foreground: 0 0% 98%;
       //--card: 0 0% 3.9%;
       --card: 228deg 4.5% 21.76%;
